--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sumit Kumar
-logo: /assets/img/headshot_circle.png
+logo: disp_img.jpeg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
